# rules_wasm_component

./: .bazelrc  .bazelrc.ci  .buildifier.json  .gitignore  .hermetic_test.sh  .hermetic_test_README.md  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pre-commit-instructions.md  .secrets.baseline  ACHIEVEMENTS.md  BUILD.bazel  CHANGELOG.md  CHECKSUM_UPDATER_NPM_ISSUE.md  CLAUDE.md  CONTRIBUTING.md  FINAL_ISSUE_ASSESSMENT.md  HERMITICITY.md  HERMITICITY_SOLUTIONS.md  ISSUE_AUDIT_2025-11-14.md  MODULE.bazel  PATCH_README.md  PRODUCTION_READY.md  README.md  SECURITY.md  SHELL_USAGE_ANALYSIS.md  STATUS.md  SYMMETRIC_IMPLEMENTATION.md  TESTING_SUMMARY.md  TOOL_BUILDER_SOLUTION.md  WORKSPACE.bazel  cliff.toml  flake.nix  package.json  rivet.yaml  rustfmt.toml  test_archive_BUILD  test_components_with_wasmtime.sh  test_cpp_archive.cpp  (+3 more)
checksums/: BUILD.bazel  component_registry.bzl  registry.bzl  registry_test.bzl  toolchain_bundles.json
checksums/components/: BUILD.bazel  registry.json  wasi-http-proxy.json
checksums/generator/: BUILD.bazel  Cargo.toml
checksums/tools/: BUILD.bazel  binaryen.json  componentize-py.json  file-ops-component.json  go.json  jco.json  loom.json  meld.json  nodejs.json  nonexistent-tool.json  spar.json  synth.json  tinygo.json  wac.json  wasi-sdk.json  wasm-tools.json  wasmsign2-cli.json  wasmtime.json  wit-bindgen-wrpc.json  wit-bindgen.json  witness.json  wizer.json  wkg.json  wrpc.json  wsc.json
common/: BUILD.bazel  common.bzl  wasm_component_utils.bzl
docs/: BUILD.bazel  MODULE.bazel.multi-language.example  MODULE.bazel.rust-only.example  RFC_RULES_CC_AUTO_DETECT.md  TECHNICAL_ISSUES.md  VERSION_MANAGEMENT.md  WINDOWS_SUPPORT.md  ai_agent_guide.md  ai_discovery_index.md  certification-pipeline.md  clippy.md  ecosystem-integration-spike.md  embedded_runtime_fix.md  example_rule.bzl  export_macro_issue.md  getting-started.md  hermetic-test-improvements.md  hermetic-testing-guide.md  migration.md  multi_profile.md  rule_schemas.json  rules.md  stardoc_targets.bzl  stardoc_with_frontmatter.bzl  toolchain_configuration.md  wit_bindgen_macro_analysis.md
docs-site/: .gitignore  .prettierrc  .prettierrc.json  BUILD.bazel  CONTENT_HIERARCHY.md  DEPLOYMENT.md  README.md  astro.config.mjs  docs_build.bzl  docs_dev.bzl  eslint.config.js  package.json
docs-site/scripts/: generate-rule-docs.js
docs/templates/: astro_header.vm
examples/aot_embed_test/: BUILD.bazel
examples/aot_example/: BUILD.bazel
examples/aot_test/: BUILD.bazel
examples/basic/: BUILD.bazel  README.md
examples/cli_tool_example/: BUILD.bazel  README.md
go/: BUILD.bazel  defs.bzl  go_wasm_component_test.bzl
go/private/: BUILD.bazel  go_wasm_component_test.bzl
js/: BUILD.bazel  defs.bzl
js/private/: BUILD.bazel  jco_opt.bzl  jco_types.bzl
moonbit/: BUILD.bazel  defs.bzl
moonbit/private/: BUILD.bazel  moonbit_wasm_binary.bzl  moonbit_wasm_cli.bzl  moonbit_wasm_component.bzl
python/: BUILD.bazel  defs.bzl
python/private/: BUILD.bazel  python_wasm_binary.bzl  python_wasm_component.bzl
rust/: BUILD.bazel  clippy.bzl  debug_windows.bzl  defs.bzl  rust_wasm_binary.bzl  rust_wasm_component.bzl  rust_wasm_component_bindgen.bzl  rust_wasm_component_macro.bzl  rust_wasm_component_test.bzl  rust_wasm_component_wizer.bzl  transitions.bzl
rust/debug/: BUILD.bazel
rust/private/: BUILD.bazel  debug_windows.bzl  rust_wasm_component.bzl  rust_wasm_component_bindgen.bzl  rust_wasm_component_macro.bzl  rust_wasm_component_wizer.bzl  rust_wasm_module.bzl  transitions.bzl
test_wac/: BUILD.bazel  BUILD_no_wasi.bazel  simple.wit  simple_no_wasi.wit  simple_no_wasi_v020.wit
test_wac/src/: lib.rs  lib_no_wasi.rs  lib_no_wasi_v020.rs
toolchains/: BUILD.bazel  BUILD.bazel.file_ops  BUILD.hermetic  BUILD.nixpkgs  BUILD.wac  BUILD.wasm_tools  BUILD.wasm_tools_bazel  BUILD.wasmsign2  BUILD.wasmtime  BUILD.wit_bindgen  BUILD.wizer  BUILD.wizer_bazel  BUILD.wkg  BUILD.wrpc  DUAL_IMPLEMENTATION_EXAMPLE.md  binaryen_toolchain.bzl  bundle.bzl  componentize_py_toolchain.bzl  cpp_component_toolchain.bzl  diagnostics.bzl  dual_file_ops_toolchain.bzl  extensions.bzl  file_ops_selection.bzl  file_ops_toolchain.bzl  go_toolchain.bzl  hermetic_extension.bzl  jco_toolchain.bzl  loom_toolchain.bzl  meld_toolchain.bzl  monitoring.bzl  noop_ar.sh  secure_download.bzl  spar_toolchain.bzl  symmetric_wit_bindgen_toolchain.bzl  synth_toolchain.bzl  tinygo_toolchain.bzl  tool_cache.bzl  tool_registry.bzl  tool_versions.bzl  wasi_sdk_toolchain.bzl  (+11 more)
toolchains/bazel_tools_deps/: BUILD.bazel  Cargo.toml
tools-builder/: BUILD.bazel  MODULE.bazel  README.md  simple_tool.rs
tools-builder/toolchains/: BUILD.bazel  Cargo.toml  builder_extensions.bzl  builder_macros.bzl
wac/: BUILD.bazel  defs.bzl  wac_bundle.bzl  wac_compose.bzl  wac_plug.bzl  wac_remote_compose.bzl
wac/private/: BUILD.bazel  wac_bundle.bzl  wac_remote_compose.bzl
wasm/: BUILD.bazel  defs.bzl  extensions.bzl  language_extensions.bzl  multi_language_wasm_component.bzl  ssh_keygen.bzl  unified_extension.bzl  wasm_aot_aspect.bzl  wasm_component_new.bzl  wasm_component_wizer.bzl  wasm_component_wizer_library.bzl  wasm_embed_aot.bzl  wasm_precompile.bzl  wasm_run.bzl  wasm_signing.bzl  wasm_validate.bzl
wasm/adapters/: BUILD.bazel  wasi_snapshot_preview1.reactor.wasm
wasm/private/: BUILD.bazel  aadl_wit_library.bzl  binaryen_optimize.bzl  meld_fuse.bzl  synth_compile.bzl  wasm_aot_aspect.bzl  wasm_component_import.bzl  wasm_component_new.bzl  wasm_component_wizer.bzl  wasm_component_wizer_library.bzl  wasm_embed_aot.bzl  wasm_module_coverage.bzl  wasm_optimize.bzl  wasm_signing.bzl  wasm_tool_run.bzl  wasm_validate.bzl  wasmsign2_tools.bzl  wsc_attestation.bzl
wit/: BUILD.bazel  defs.bzl  symmetric_wit_bindgen.bzl  wasi_deps.bzl  wit_bindgen.bzl  wit_deps_check.bzl  wit_library.bzl  wit_markdown.bzl
wit/private/: BUILD.bazel  wasi_deps.bzl  wasi_p3_deps.bzl  wit_bindgen.bzl  wit_vendor.bzl
wkg/: BUILD.bazel  defs.bzl  oci_signing.bzl
wkg/private/: BUILD.bazel  (+1 more)
wrpc/: BUILD.bazel  defs.bzl  transports.bzl
(+573 files in other folders)
