"""Root BUILD file for rules_wasm_component"""

load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

# Export all rule files
exports_files([
    "LICENSE",
    "README.md",
])

# Buildifier for formatting
buildifier(
    name = "buildifier",
    diff_command = "diff -u",
    mode = "fix",
)

# Documentation generation
filegroup(
    name = "all_files",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
)

# Version file for stamping
genrule(
    name = "version",
    outs = ["version.txt"],
    cmd = "echo '0.1.0' > $@",
    visibility = ["//visibility:public"],
)

# Clippy linting for all Rust code - replaces scripts/clippy.sh
# Usage: bazel build //:clippy (runs clippy on all Rust targets)
alias(
    name = "clippy",
    actual = "//test/clippy:test_lib_clippy",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "test_archive",
    srcs = ["test_cpp_archive.cpp"],
    target_compatible_with = [
        "@platforms//cpu:wasm32",
        "@platforms//os:wasi",
    ],
)
