"""Bazel Module for WebAssembly Component Model Rules"""

module(
    name = "rules_wasm_component",
    version = "1.0.0",
    compatibility_level = 1,
)

# Dependencies for WebAssembly tooling
bazel_dep(name = "rules_rust", version = "0.65.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_go", version = "0.57.0")

# Test optional auto-detection control (Issue #163)
git_override(
    module_name = "rules_cc",
    remote = "https://github.com/avrabe/rules_cc.git",
    commit = "7215331f9e53f80070dc01c4a95a0f9c53ea477b",
)

# OCI image signing capabilities
bazel_dep(name = "rules_oci", version = "1.8.0")

# Hermetic toolchain management with pre-built binaries

# Development dependencies
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.1", dev_dependency = True)

# Test dependencies for cross-package C++ header examples
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# Real-world C++ library examples for comprehensive testing
bazel_dep(name = "abseil-cpp", version = "20250814.0")

# bazel_dep(name = "catch2", version = "3.8.1")  # Not available in current build setup
bazel_dep(name = "spdlog", version = "1.12.0")

# Note: SSH key generation now uses hermetic WebAssembly component (tools/ssh_keygen)

# Rust toolchain setup
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
        "wasm32-wasip2",  # Now supported with patched rules_rust
        # Host targets for cross-compilation in tools-builder
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
    versions = ["1.90.0"],
)
use_repo(rust, "rust_toolchains")

# Register toolchains
register_toolchains("@rust_toolchains//:all")

# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.2")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

# WASI WIT interface definitions
wasi_wit_ext = use_extension("//wasm:extensions.bzl", "wasi_wit")
wasi_wit_ext.init()
use_repo(wasi_wit_ext, "wasi_cli", "wasi_cli_v020", "wasi_clocks", "wasi_clocks_v020", "wasi_filesystem", "wasi_filesystem_v020", "wasi_http", "wasi_io", "wasi_io_v020", "wasi_nn", "wasi_nn_v0_2_0_rc_2024_06_25", "wasi_nn_v0_2_0_rc_2024_08_19", "wasi_random", "wasi_random_v020", "wasi_sockets", "wasi_sockets_v020")  # Complete WASI ecosystem (0.2.3 + 0.2.0 + all NN versions)

# WebAssembly toolchains
wasm_toolchain = use_extension("//wasm:extensions.bzl", "wasm_toolchain")
wasm_toolchain.register(
    name = "wasm_tools",
    strategy = "download",  # Download strategy with improved error messages for signing
    version = "1.240.0",
)
use_repo(wasm_toolchain, "wasm_tools_toolchains")

register_toolchains("@wasm_tools_toolchains//:wasm_tools_toolchain")

# WebAssembly Package Tools (wkg) toolchain
wkg = use_extension("//wasm:extensions.bzl", "wkg")
wkg.register(
    name = "wkg",
    strategy = "download",
    version = "0.12.0",
)
use_repo(wkg, "wkg_toolchain")

register_toolchains("@wkg_toolchain//:wkg_toolchain_def")

# WASI SDK toolchain
wasi_sdk = use_extension("//wasm:extensions.bzl", "wasi_sdk")
wasi_sdk.register(
    name = "wasi",
    strategy = "download",
    version = "27",
)
use_repo(wasi_sdk, "wasi_sdk")

# Configure cc_configure to disable auto-detection (Issue #163)
# This prevents system WASI SDK at /usr/local/wasi-sdk from being detected
cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
cc_configure.configure(auto_detect = False)
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")

# Register both WASI SDK and C++ toolchains
register_toolchains(
    "@wasi_sdk//:wasi_sdk_toolchain",
    "@wasi_sdk//:cc_toolchain",
)

# Register default C++ toolchains for host Rust binaries requiring C++ linking
register_toolchains("@bazel_tools//tools/cpp:all")

# TinyGo WASI Preview 2 toolchain
tinygo = use_extension("//wasm:extensions.bzl", "tinygo")
tinygo.register(
    name = "tinygo",
    tinygo_version = "0.39.0",
)
use_repo(tinygo, "tinygo_toolchain")

register_toolchains("@tinygo_toolchain//:tinygo_toolchain_def")

# Wizer WebAssembly pre-initialization toolchain
wizer = use_extension("//wasm:extensions.bzl", "wizer")
wizer.register(
    name = "wizer",
    strategy = "download",
    version = "9.0.0",
)
use_repo(wizer, "wizer_toolchain")

register_toolchains("@wizer_toolchain//:wizer_toolchain_def")

# Wasmtime WebAssembly runtime
wasmtime = use_extension("//wasm:extensions.bzl", "wasmtime")
wasmtime.register(
    name = "wasmtime",
    strategy = "download",
    version = "37.0.2",
)
use_repo(wasmtime, "wasmtime_toolchain")

register_toolchains("@wasmtime_toolchain//:wasmtime_toolchain")

# C++ WebAssembly components with WASI SDK
cpp_component = use_extension("//wasm:extensions.bzl", "cpp_component")
cpp_component.register(
    name = "cpp",
    strategy = "download",
    wasi_sdk_version = "27",  # Match existing WASI SDK version
)
use_repo(cpp_component, "cpp_toolchain")

register_toolchains("@cpp_toolchain//:cpp_component_toolchain")

# Hermetic Node.js toolchain for JavaScript/TypeScript support
bazel_dep(name = "rules_nodejs", version = "6.5.0")

# Configure Node.js version and tools
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.18.0")
use_repo(node, "nodejs_toolchains")

# JavaScript/TypeScript WebAssembly components with JCO
jco = use_extension("//wasm:extensions.bzl", "jco")
jco.register(
    name = "jco",
    node_version = "20.18.0",
    version = "1.4.0",
)
use_repo(jco, "jco_toolchain")

# Register Node.js toolchains for JavaScript/TypeScript support
register_toolchains("@nodejs_toolchains//:all")

# Register jco toolchain for JavaScript/TypeScript components
register_toolchains("@jco_toolchain//:jco_toolchain")

# File Operations Component toolchain for universal file handling
register_toolchains("//toolchains:file_ops_toolchain_local")

# WASM Tools Component toolchain for universal wasm-tools operations
register_toolchains("//toolchains:wasm_tools_component_toolchain_local")

# Rust crates for tools
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "wizer_crates",
    cargo_lockfile = "//tools/wizer_initializer:Cargo.lock",
    manifests = ["//tools/wizer_initializer:Cargo.toml"],
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//tools/checksum_updater:Cargo.lock",
    manifests = ["//tools/checksum_updater:Cargo.toml"],
    supported_platform_triples = [
        "wasm32-wasip2",  # Enable WebAssembly WASI Preview 2 support
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",  # BCR environment ARM64 Linux
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
crate.from_cargo(
    name = "wasmsign2_crates",
    manifests = ["@wasmsign2_src//:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",  # BCR environment ARM64 Linux
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
crate.from_cargo(
    name = "ssh_keygen_crates",
    cargo_lockfile = "//tools/ssh_keygen:Cargo.lock",
    manifests = ["//tools/ssh_keygen:Cargo.toml"],
    supported_platform_triples = [
        "wasm32-wasip2",  # Enable WebAssembly WASI Preview 2 support
        "wasm32-wasip1",
        "wasm32-unknown-unknown",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
crate.from_cargo(
    name = "wasm_embed_aot_crates",
    cargo_lockfile = "//tools/wasm_embed_aot:Cargo.lock",
    manifests = ["//tools/wasm_embed_aot:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
use_repo(crate, "crates", "ssh_keygen_crates", "wasm_embed_aot_crates", "wasmsign2_crates", "wizer_crates")

# Modernized WASM tool repositories using git_repository + rules_rust
wasm_tool_repos = use_extension("//toolchains:extensions.bzl", "wasm_tool_repositories")
use_repo(
    wasm_tool_repos,
    "wac_src",
    "wasm_tools_src",
    "wasmsign2_src",
    "wit_bindgen_src",
    "wizer_src",
    "wrpc_src",
)
