"""Bazel Module for WebAssembly Component Model Rules"""

module(
    name = "rules_wasm_component",
    version = "1.0.0",
    compatibility_level = 1,
)

# Dependencies for WebAssembly tooling
bazel_dep(name = "rules_rust", version = "0.68.1")

# Override rules_rust with fork that fixes _symlink_sysroot_tree bug
# This fix ensures wasm-component-ld is symlinked into the sysroot
# See: https://github.com/bazelbuild/rules_rust/pull/3727
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/avrabe/rules_rust.git",
    commit = "c30cafc9cb6796205554fbfb62ea83a11f9db673",
)
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.59.0")

# OCI image signing capabilities
bazel_dep(name = "rules_oci", version = "2.2.6")

# Hermetic toolchain management with pre-built binaries

# Development dependencies
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)

# Fix abseil-cpp/protobuf compatibility: protobuf 29.0 expects removed absl/utility:if_constexpr
# Upgrade to protobuf 33.0 which is compatible with abseil-cpp 20250814.0
single_version_override(
    module_name = "protobuf",
    version = "33.0",
)

# Test dependencies for cross-package C++ header examples
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# Real-world C++ library examples for comprehensive testing
bazel_dep(name = "abseil-cpp", version = "20250814.0")

# bazel_dep(name = "catch2", version = "3.8.1")  # Not available in current build setup
bazel_dep(name = "spdlog", version = "1.12.0")

# Note: SSH key generation now uses hermetic WebAssembly component (tools/ssh_keygen)

# Rust toolchain setup
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
        "wasm32-wasip2",  # Now supported with patched rules_rust
        # Host targets for cross-compilation in tools-builder
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")

# Register toolchains
register_toolchains("@rust_toolchains//:all")

# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.2")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

# WASI WIT interface definitions
wasi_wit_ext = use_extension("//wasm:extensions.bzl", "wasi_wit")
wasi_wit_ext.init()
use_repo(
    wasi_wit_ext,
    # WASI 0.2.3 (default)
    "wasi_cli",
    "wasi_clocks",
    "wasi_filesystem",
    "wasi_http",
    "wasi_io",
    "wasi_random",
    "wasi_sockets",
    # WASI 0.2.0
    "wasi_cli_v020",
    "wasi_clocks_v020",
    "wasi_filesystem_v020",
    "wasi_io_v020",
    "wasi_random_v020",
    "wasi_sockets_v020",
    # WASI 0.2.6 (used by wasi-sdk 29)
    "wasi_cli_v026",
    "wasi_clocks_v026",
    "wasi_filesystem_v026",
    "wasi_http_v026",
    "wasi_io_v026",
    "wasi_random_v026",
    "wasi_sockets_v026",
    # WASI 0.2.8
    "wasi_cli_v028",
    "wasi_clocks_v028",
    "wasi_filesystem_v028",
    "wasi_http_v028",
    "wasi_io_v028",
    "wasi_random_v028",
    "wasi_sockets_v028",
    # WASI NN
    "wasi_nn",
    "wasi_nn_v0_2_0_rc_2024_06_25",
    "wasi_nn_v0_2_0_rc_2024_08_19",
)

# WebAssembly toolchains
wasm_toolchain = use_extension("//wasm:extensions.bzl", "wasm_toolchain")
wasm_toolchain.register(
    name = "wasm_tools",
    strategy = "download",  # Download prebuilt binaries from GitHub releases
    version = "1.243.0",
)
use_repo(wasm_toolchain, "wasm_tools_toolchains")

register_toolchains("@wasm_tools_toolchains//:wasm_tools_toolchain")

# WebAssembly Package Tools (wkg) toolchain
wkg = use_extension("//wasm:extensions.bzl", "wkg")
wkg.register(
    name = "wkg",
    strategy = "download",
    version = "0.13.0",
)
use_repo(wkg, "wkg_toolchain")

register_toolchains("@wkg_toolchain//:wkg_toolchain_def")

# WASI SDK toolchain
wasi_sdk = use_extension("//wasm:extensions.bzl", "wasi_sdk")
wasi_sdk.register(
    name = "wasi",
    strategy = "download",
    version = "29",
)
use_repo(wasi_sdk, "wasi_sdk")

# Register both WASI SDK and C++ toolchains
register_toolchains(
    "@wasi_sdk//:wasi_sdk_toolchain",
    "@wasi_sdk//:cc_toolchain",
)

# Register default C++ toolchains for host Rust binaries requiring C++ linking
register_toolchains("@bazel_tools//tools/cpp:all")

# TinyGo WASI Preview 2 toolchain
tinygo = use_extension("//wasm:extensions.bzl", "tinygo")
tinygo.register(
    name = "tinygo",
    tinygo_version = "0.40.1",  # Must match version in checksums/tools/tinygo.json
)
use_repo(tinygo, "tinygo_toolchain")

register_toolchains("@tinygo_toolchain//:tinygo_toolchain_def")

# Wasmtime WebAssembly runtime (includes wizer as of v39.0.0)
# Note: Standalone wizer toolchain removed - use `wasmtime wizer` subcommand instead
wasmtime = use_extension("//wasm:extensions.bzl", "wasmtime")
wasmtime.register(
    name = "wasmtime",
    strategy = "download",
    version = "39.0.1",
)
use_repo(wasmtime, "wasmtime_toolchain")

register_toolchains("@wasmtime_toolchain//:wasmtime_toolchain")

# C++ WebAssembly components with WASI SDK
cpp_component = use_extension("//wasm:extensions.bzl", "cpp_component")
cpp_component.register(
    name = "cpp",
    strategy = "download",
    wasi_sdk_version = "29",
)
use_repo(cpp_component, "cpp_toolchain")

register_toolchains("@cpp_toolchain//:cpp_component_toolchain")

# Hermetic Node.js toolchain for JavaScript/TypeScript support
bazel_dep(name = "rules_nodejs", version = "6.5.0")

# Configure Node.js version and tools
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.18.0")
use_repo(node, "nodejs_toolchains")

# JavaScript/TypeScript WebAssembly components with JCO
jco = use_extension("//wasm:extensions.bzl", "jco")
jco.register(
    name = "jco",
    node_version = "20.18.0",
    version = "1.4.0",
)
use_repo(jco, "jco_toolchain")

# Register Node.js toolchains for JavaScript/TypeScript support
register_toolchains("@nodejs_toolchains//:all")

# Register jco toolchain for JavaScript/TypeScript components
register_toolchains("@jco_toolchain//:jco_toolchain")

# File Operations Component toolchain for universal file handling
register_toolchains("//toolchains:file_ops_toolchain_target")

# External File Operations Component from bazel-file-ops-component
# Phase 2: External component with LOCAL AOT compilation
#
# We download the regular WASM component and compile AOT locally using our
# wasm_precompile rules. This guarantees compatibility with the user's
# Wasmtime version while maintaining 100x faster startup.
#
# WASM component downloads using centralized JSON registry
# All checksums verified from //checksums/tools/*.json
wasm_component_download = use_repo_rule("//toolchains:wasm_component_download.bzl", "wasm_component_download")

# File operations component (version in //checksums/tools/file-ops-component.json)
wasm_component_download(
    name = "file_ops_component_external",
    tool_name = "file-ops-component",
    version = "0.1.0-rc.3",
    filename = "file_ops_component.wasm",
)

# WSC (WebAssembly Signature Component) for signing (version in //checksums/tools/wsc.json)
# Note: kept as wasmsign2_cli_wasm for backward compatibility with existing wrappers
wasm_component_download(
    name = "wasmsign2_cli_wasm",
    tool_name = "wsc",
    version = "0.4.0",
    filename = "wasmsign2.wasm",
)

# LOOM WebAssembly optimizer (version in //checksums/tools/loom.json)
wasm_component_download(
    name = "loom_wasm",
    tool_name = "loom",
    version = "0.1.0-rc1",
    filename = "loom.wasm",
)

# WASM Tools Component toolchain for universal wasm-tools operations
register_toolchains("//toolchains:wasm_tools_component_toolchain_local")

# Rust crates for tools
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//tools/checksum_updater:Cargo.lock",
    manifests = ["//tools/checksum_updater:Cargo.toml"],
    supported_platform_triples = [
        "wasm32-wasip2",  # Enable WebAssembly WASI Preview 2 support
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",  # BCR environment ARM64 Linux
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
crate.from_cargo(
    name = "wasmsign2_crates",
    manifests = ["@wasmsign2_src//:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",  # BCR environment ARM64 Linux
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
crate.from_cargo(
    name = "ssh_keygen_crates",
    cargo_lockfile = "//tools/ssh_keygen:Cargo.lock",
    manifests = ["//tools/ssh_keygen:Cargo.toml"],
    supported_platform_triples = [
        "wasm32-wasip2",  # Enable WebAssembly WASI Preview 2 support
        "wasm32-wasip1",
        "wasm32-unknown-unknown",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)
crate.from_cargo(
    name = "wasm_embed_aot_crates",
    cargo_lockfile = "//tools/wasm_embed_aot:Cargo.lock",
    manifests = ["//tools/wasm_embed_aot:Cargo.toml"],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
)

# Note: wit-bindgen-rt crate is available from checksum_updater/Cargo.toml (version 0.39.0)
# It provides the proper runtime support for CLI-generated bindings:
#   - export! macro for component exports
#   - wit_bindgen::rt module with correct allocator integration
# This replaces the previously embedded runtime stubs

use_repo(crate, "crates", "ssh_keygen_crates", "wasm_embed_aot_crates", "wasmsign2_crates")

# Modernized WASM tool repositories using git_repository + rules_rust
wasm_tool_repos = use_extension("//toolchains:extensions.bzl", "wasm_tool_repositories")
use_repo(
    wasm_tool_repos,
    "wac_src",
    "wasm_tools_src",
    "wasmsign2_src",
    "wit_bindgen_src",
    "wrpc_src",
)
