# Bazel workspace file for rules_wasm_component
# Note: This file is for legacy WORKSPACE mode compatibility
# Modern projects should use MODULE.bazel instead

workspace(name = "rules_wasm_component")

# Fallback to WORKSPACE mode if bzlmod is not available
# Most dependencies are handled in MODULE.bazel for modern Bazel versions
