"""Centralized checksum management for WebAssembly toolchain"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Note: registry_test.bzl load removed - tests temporarily disabled
# See comment at end of file for details

package(default_visibility = ["//visibility:public"])

# Centralized registry API
bzl_library(
    name = "registry",
    srcs = ["registry.bzl"],
    visibility = ["//visibility:public"],
)

# Export all tool checksum files for consumption by toolchains
# Note: tools/*.json files are exported from //checksums/tools package
filegroup(
    name = "all_checksums",
    srcs = ["//checksums/tools:all_json"],
    visibility = ["//visibility:public"],
)

# Individual tool checksum files
# These reference files from the //checksums/tools package
filegroup(
    name = "wasm_tools_checksums",
    srcs = ["//checksums/tools:wasm-tools.json"],
)

filegroup(
    name = "wit_bindgen_checksums",
    srcs = ["//checksums/tools:wit-bindgen.json"],
)

filegroup(
    name = "wac_checksums",
    srcs = ["//checksums/tools:wac.json"],
)

filegroup(
    name = "wkg_checksums",
    srcs = ["//checksums/tools:wkg.json"],
)

filegroup(
    name = "wasmtime_checksums",
    srcs = ["//checksums/tools:wasmtime.json"],
)

filegroup(
    name = "wasi_sdk_checksums",
    srcs = ["//checksums/tools:wasi-sdk.json"],
)

filegroup(
    name = "tinygo_checksums",
    srcs = ["//checksums/tools:tinygo.json"],
)

filegroup(
    name = "jco_checksums",
    srcs = ["//checksums/tools:jco.json"],
)

# Note: wizer_checksums removed - wizer is now part of wasmtime v39.0.0+
# Use wasmtime_checksums instead

# Note: Unit tests for registry API temporarily disabled
# The registry functions now require repository_ctx to read from JSON files,
# which isn't available in Starlark unit tests (analysis time).
# Validation is performed at build time when toolchains are resolved.
# TODO: Add integration tests that exercise the registry via actual builds.
# registry_test_suite(name = "registry_test")
