"""BUILD file for common utilities"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
)

bzl_library(
    name = "wasm_component_utils",
    srcs = ["wasm_component_utils.bzl"],
    deps = ["//providers"],
)
